--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "df48df44-7713-4486-892c-24179d2061c1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
