--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/_redirect",
               {
                 "glob": "_redirects",
                 "input": "src",
